deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-backend-service
  labels:
    app: go-backend
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: go-backend
